# opencv-2

ocr/: CMakeCache.txt  CMakeLists.txt  Makefile  auto_java_demo.sh  auto_test_eng.sh  bp.xml  cmake_install.cmake  com_ocr_java.h  ocr.cbp  ocr_detect  readme.txt
ocr/com/: ocr_java.java
ocr/src/: kmeans.cpp  kmeans.h  ocr_java.cpp  ocr_kmeans.cpp  ocr_kmeans.h  ocr_main.cpp  ocr_ml.cpp  ocr_ml.h  ocr_read.cpp  ocr_read.h  ocr_read.hpp.h  ocr_tesseract.cpp  ocr_tesseract.h
ocr/test/: 1.tif  2.txt  4.tif  5.tif  result.txt  temp.tif  temp.tif_0  temp.tif_1  temp.tif_2  temp.tif_4  temp.tif_6  temp.tif_7
samples/: readme.txt
samples/sample1/: cloud  cloud_test.c  readme.txt  test  testCVPY.cy
samples/sample2/: detect_barcode.py  readme.txt
samples/sample3/opencv_demo/: Makefile  circle_detect.cpp  circle_detect.h  demo.cpp  demo_opencv  text_detect.cpp  text_detect.cpp~  text_detect.h
samples/sample3/opencv_demo/opencv_lib/lib/: libopencv_calib3d.so.3.0.0  libopencv_features2d.so.3.0.0  libopencv_flann.so.3.0.0  libopencv_highgui.so.3.0.0  libopencv_imgcodecs.so.3.0.0  libopencv_ml.so.3.0.0  libopencv_objdetect.so.3.0.0  libopencv_photo.so.3.0.0  libopencv_shape.so.3.0.0  libopencv_stitching.so.3.0.0  libopencv_superres.so.3.0.0  libopencv_video.so.3.0.0  libopencv_videoio.so.3.0.0  libopencv_videostab.so.3.0.0
samples/sample3/opencv_demo/opencv_lib/lib/pkgconfig/: opencv.pc
samples/sample3/opencv_demo/opencv_lib/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
samples/sample4/: Makefile  auto_java_demo.sh  com_ocr_java.h  ocr_java.cpp  ocr_java.cpp~  readme.txt
samples/sample4/com/: ocr_java.java  ocr_java.java~
