cmake_minimum_required(VERSION 2.8.12.2)
project(ocr)
set(OpenCV_DIR /home/cloud/opencv3.0/opencv-3.0.0-alpha/release)
include_directories(/home/cloud/opencv_lib/include)
include_directories(./)
include_directories(/usr/local/include/leptonica)
include_directories(/usr/lib/jvm/java-7-openjdk-amd64/include/)
find_package(OpenCV REQUIRED)
link_directories(/usr/local/lib)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

aux_source_directory(./src SOURCE_FILES)
#set(SOURCE_FILES src/ocr_read.cpp src/ocr_read.h src/ocr_main.cpp src/ocr_tesseract.cpp src/ocr_tesseract.h)

message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
message(STATUS "    include path: ${SOURCE_FILES}")
add_executable(ocr_detect ${SOURCE_FILES})
target_link_libraries(ocr_detect ${OpenCV_LIBS})
target_link_libraries(ocr_detect lept tesseract)

add_library(ocr_java SHARED ${SOURCE_FILES})
target_link_libraries(ocr_java ${OpenCV_LIBS})
target_link_libraries(ocr_java lept tesseract)